k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: syanagihara-cf-ip # Name of Static IP Address
    networking.gke.io/managed-certificates: certificate
  name: ingress
spec:
  backend:
    serviceName: app
    servicePort: 8080
